2002-05-30  Richard Henderson  <rth@redhat.com>

	* ld-bootstrap/bootstrap.exp: Test --relax.

2002-05-28  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/libdso-2.d: Tweak for combreloc now default on.

2002-05-07  Richard Sandiford  <rsandifo@redhat.com>

	* lib/ld-lib.exp (run_dump_test): Add -L$srcdir/$subdir.
	(is_elf_format): New, extracted from...
	* ld-scripts/weak.exp: ...here.
	* ld-scripts/overlay-size.exp: New test.
	* ld-scripts/overlay-size.[tsd],
	* ld-scripts/overlay-size-map.d: New files for it.

2002-05-02  Richard Sandiford  <rsandifo@redhat.com>

	* ld-scripts/map-address.exp: Quote conditions.

2002-04-30  Richard Sandiford  <rsandifo@redhat.com>

	* ld-scripts/map-address.exp: New test.
	* ld-scripts/map-address.[td]: New files for it.

2002-04-19  Richard Henderson  <rth@redhat.com>

	* ld-elfvsb/elfvsb.exp: Mirror ia64 non-pic xfails for alpha.
	* ld-shared/shared.exp: Likewise.
	* ld-selective/selective.exp: Disable for alpha.
	* ld-undefined/undefined.exp: Add alpha to dwarf2 xfails.

2002-04-05  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/libdso-2.d, ld-cris/dso-2.s, ld-cris/hide1: New test.

2002-03-19  Hans-Peter Nilsson  <hp@axis.com>

	* ld-cris/ldsym1.d: New test.

	* ld-mmix/bpo-1.d: Tweak for type of linker-script-symbols no
	longer set to object.
	* ld-mmix/undef-3.d, ld-mmix/start-1.d, ld-mmix/locto-1.d,
	ld-mmix/loct-1.d, ld-mmix/locdo-1.d, ld-mmix/local7.d,
	ld-mmix/local5.d, ld-mmix/local3.d, ld-mmix/local1.d,
	ld-mmix/loc6.d, ld-mmix/loc4.d, ld-mmix/loc3.d, ld-mmix/loc2.d,
	ld-mmix/loc1.d, ld-mmix/greg-7.d, ld-mmix/greg-6.d,
	ld-mmix/greg-5.d, ld-mmix/greg-4.d, ld-mmix/greg-3.d,
	ld-mmix/greg-2.d, ld-mmix/greg-19.d, ld-mmix/greg-1.d,
	ld-mmix/bspec2.d, ld-mmix/bspec1.d, ld-mmix/bpo-9.d,
	ld-mmix/bpo-6.d, ld-mmix/bpo-5.d, ld-mmix/bpo-4.d,
	ld-mmix/bpo-3.d, ld-mmix/bpo-2.d, ld-mmix/bpo-19.d,
	ld-mmix/bpo-18.d, ld-mmix/bpo-17.d, ld-mmix/bpo-16.d,
	ld-mmix/bpo-14.d, ld-mmix/bpo-11.d, ld-mmix/bpo-10.d: Ditto.
