@@ -1,3 +1,9 @@
+2005-06-02  H.J. Lu <hjl@gnu.org>
+
+	* ld-srec/sr3.cc (__dso_handle): Added for gcc 3.1 with
+	-fuse-cxa-atexit.
+	(__cxa_atexit): Likewise.
+
 2002-05-30  Richard Henderson  <rth@redhat.com>
 
 	* ld-bootstrap/bootstrap.exp: Test --relax.
